--- a/resources/isoverse.html
+++ b/resources/isoverse.html
@@ -54,7 +54,7 @@ permalink: /isoverse/
     </h3>
   </div>
   <div class="media-body">
-    <p>This package provides broad functionality for IRMS data processing and reduction pipelines including signal conversion (voltage to current and back), time scaling (continuous flow chromatograms), isotope ratio calculations, delta value calculations, as well as easy-to-use highly flexible data calibration and visualization pipelines for continuous flow data. Additional tools on O17 corrections, H3 factor calculation, peak detection, baseline correction, etc are in thw works.</p>
+    <p>This package provides broad functionality for IRMS data processing and reduction pipelines including signal conversion (voltage to current and back), time scaling (continuous flow chromatograms), isotope ratio calculations, delta value calculations, as well as easy-to-use highly flexible data calibration and visualization pipelines for continuous flow data. Additional tools on O17 corrections, H3 factor calculation, peak detection, baseline correction, etc are in the works.</p>
 
     <p>
       <span class="fa fa-rocket"></span>: Explore all functionality and vignettes of the <strong>isoprocessor</strong> package interactively on <a href="https://mybinder.org/">binder</a>:
