update isoverse page

--- a/resources/isoverse.html
+++ b/resources/isoverse.html
@@ -12,7 +12,7 @@ permalink: /isoverse/
   <div class="media-heading">
     <h3>
       <a href="http://www.isoverse.org">isoverse</a>
-      <a href="http://github.com/KopfLab/isoverse"><i class="fa fa-github"></i></a>
+      <a href="http://github.com/isoverse/isoverse"><i class="fa fa-github"></i></a>
     </h3>
   </div>
   <div class="media-body">
@@ -26,8 +26,8 @@ permalink: /isoverse/
 <div class="media">
   <div class="media-heading">
     <h3>
-      <a href="https://isoreader.kopflab.org">isoreader</a>
-      <a href="http://github.com/KopfLab/isoreader"><i class="fa fa-github"></i></a>
+      <a href="http://isoreader.isoverse.org">isoreader</a>
+      <a href="http://github.com/isoverse/isoreader"><i class="fa fa-github"></i></a>
     </h3>
   </div>
   <div class="media-body">
@@ -36,51 +36,63 @@ permalink: /isoverse/
     </p>
 
     <p>
+      <span class="fa fa-comment"></span>: Please provide comments/suggestions and file bug reports or feature requests on <a href="http://github.com/isoverse/isoreader/issues">GitHub</a>
+    </p>
+
+    <p>
       <span class="fa fa-rocket"></span>: Explore all functionality and vignettes of the <strong>isoreader</strong> package interactively on <a href="https://mybinder.org/">binder</a>:
-      <a href="https://mybinder.org/v2/gh/KopfLab/isoreader/binder?urlpath=rstudio"><img src="https://img.shields.io/badge/launch-RStudio-blue.svg"/></a>
-      <a href="https://mybinder.org/v2/gh/KopfLab/isoreader/binder?urlpath=lab"><img src="https://img.shields.io/badge/launch-Jupyter-orange.svg"/></a>
+      <a href="https://mybinder.org/v2/gh/isoverse/isoreader/binder?urlpath=rstudio"><img src="https://img.shields.io/badge/launch-RStudio-blue.svg"/></a>
+      <a href="https://mybinder.org/v2/gh/isoverse/isoreader/binder?urlpath=lab"><img src="https://img.shields.io/badge/launch-Jupyter-orange.svg"/></a>
     </p>
   </div>
   <div class="media-right">
-    <a href="https://isoreader.kopflab.org"><img src="/resources/images/isoverse/isoreader_logo_thumb.png" align="center" height="138.5"/></a>
+    <a href="http://isoreader.isoverse.org"><img src="/resources/images/isoverse/isoreader_logo_thumb.png" align="center" height="138.5"/></a>
   </div>
 </div>
 
 <div class="media">
   <div class="media-heading">
     <h3>
-      <a href="https://isoprocessor.kopflab.org">isoprocessor</a>
-      <a href="http://github.com/KopfLab/isoprocessor"><i class="fa fa-github"></i></a>
+      <a href="http://isoprocessor.isoverse.org">isoprocessor</a>
+      <a href="http://github.com/isoverse/isoprocessor"><i class="fa fa-github"></i></a>
     </h3>
   </div>
   <div class="media-body">
     <p>This package provides broad functionality for IRMS data processing and reduction pipelines including signal conversion (voltage to current and back), time scaling (continuous flow chromatograms), isotope ratio calculations, delta value calculations, as well as easy-to-use highly flexible data calibration and visualization pipelines for continuous flow data. Additional tools on O17 corrections, H3 factor calculation, peak detection, baseline correction, etc are in the works.</p>
 
     <p>
+      <span class="fa fa-comment"></span>: Please provide comments/suggestions and file bug reports or feature requests on <a href="http://github.com/isoverse/isoprocessor/issues">GitHub</a>
+    </p>
+
+    <p>
       <span class="fa fa-rocket"></span>: Explore all functionality and vignettes of the <strong>isoprocessor</strong> package interactively on <a href="https://mybinder.org/">binder</a>:
-      <a href="https://mybinder.org/v2/gh/KopfLab/isoprocessor/binder?urlpath=rstudio"><img src="https://img.shields.io/badge/launch-RStudio-blue.svg"/></a>
-      <a href="https://mybinder.org/v2/gh/KopfLab/isoprocessor/binder?urlpath=lab"><img src="https://img.shields.io/badge/launch-Jupyter-orange.svg"/></a>
+      <a href="https://mybinder.org/v2/gh/isoverse/isoprocessor/binder?urlpath=rstudio"><img src="https://img.shields.io/badge/launch-RStudio-blue.svg"/></a>
+      <a href="https://mybinder.org/v2/gh/isoverse/isoprocessor/binder?urlpath=lab"><img src="https://img.shields.io/badge/launch-Jupyter-orange.svg"/></a>
     </p>
   </div>
   <div class="media-right">
-    <a href="https://isoprocessor.kopflab.org"><img src="/resources/images/isoverse/isoprocessor_logo_thumb.png" align="center" height="150"/></a>
+    <a href="http://isoprocessor.isoverse.org"><img src="/resources/images/isoverse/isoprocessor_logo_thumb.png" align="center" height="150"/></a>
   </div>
 </div>
 
 <div class="media">
   <div class="media-heading">
     <h3>
-      <a href="https://isoviewer.kopflab.org">isoviewer</a>
-      <a href="http://github.com/KopfLab/isoviewer"><i class="fa fa-github"></i></a>
+      <a href="http://isoviewer.isoverse.org">isoviewer</a>
+      <a href="http://github.com/isoverse/isoviewer"><i class="fa fa-github"></i></a>
     </h3>
   </div>
   <div class="media-body">
 
     <p>The isoviewer graphical user interface (GUI) provided by this package is based on the functionlity implemented by the isoreader and isoprocessor packages. The purpose of the GUI is two fold. First and foremost, it is a learning tool to illustrate how to build literate RMarkdown data processing files for IRMS data using the underlying packages as a unified interface for reading, converting and quickly visualizing various raw IRMS data file formats. The second purpose is to provide an example for a web-based IRMS data repository that is easy to run on any computer/server completely platform-independent and open-source. Towards this goal, the isoviewer package provides some rudimentary GUI modules that can be used in other more customized applications.</p>
 
+    <p>
+      <span class="fa fa-comment"></span>: Please provide comments/suggestions and file bug reports or feature requests on <a href="http://github.com/isoverse/isoviewer/issues">GitHub</a>
+    </p>
+
     <p><span class="fa fa-rocket"></span>: An online demo of the isoviewer GUI is <a href="/isoviewer_demo">available on our server</a> but has limited computational resources (i.e. could be slow).</p>
   </div>
   <div class="media-right">
-    <a href="https://isoviewer.kopflab.org"><img src="/resources/images/isoverse/isoviewer_logo_thumb.png" align="center" height="150"/></a>
+    <a href="http://isoviewer.isoverse.org"><img src="/resources/images/isoverse/isoviewer_logo_thumb.png" align="center" height="150"/></a>
   </div>
 </div>
