--- a/people.html
+++ b/people.html
@@ -46,8 +46,8 @@ weight: 1
   <h3>Geomicrobial Physiology Lab</h3>
 
 	<div class="grid">
-		{% for person in site.categories.people reversed %}
-    {% unless person.collaborator or person.alumni %}
+		{% for person in site.team %}
+
 		<div class="grid-item {{ person.group }}" alt="{{ person.title }}" title="{{ person.title }}">
 			<div class="center-wrap-1"><div class="center-wrap-2"><div class="center-wrap-3">
 				<div class="info">
@@ -66,7 +66,7 @@ weight: 1
         </div>
 			</a>
 		</div>
-    {% endunless %}
+    
 		{% endfor %}
 	</div>
 
