--- a/people.html
+++ b/people.html
@@ -46,95 +46,27 @@ weight: 1
   <h3>Geomicrobial Physiology Lab</h3>
 
 	<div class="grid">
-		{% for person in site.people_team %}
-
-		<div class="grid-item {{ person.group }}" alt="{{ person.title }}" title="{{ person.title }}">
-			<div class="center-wrap-1"><div class="center-wrap-2"><div class="center-wrap-3">
-				<div class="info">
-					<a href="{{ person.url }}">
-						<h4>{{ person.title }}</h4>
-						<p>{{ person.position }}</p>
-					</a>
-				</div>
-			</div></div></div>
-
-			<a href="{{ person.url }}" class="background">
-				<div class="grid-image">
-          {% if person.thumbnail %}<img src="{{ person.thumbnail }}"/>
-          {% else %}<br /><center>{{ person.title }}</center>
-          {% endif %}
-        </div>
-			</a>
-		</div>
-
+    {% assign people = site.people_team | sort:"weight"  %}
+		{% for person in people %}
+		  {% include grid_person.html person=person %}
 		{% endfor %}
 	</div>
 
   <h3>Joint Geobiology Labs (Faculty & Researchers)</h3>
 
   <div class="grid">
-    {% for person in site.categories.people reversed %}
-    {% if person.collaborator %}
-
-    {% if person.website %}
-      {% assign web_url = person.website %}
-    {% else %}
-      {% assign web_url = person.url %}
-    {% endif %}
-
-    <div class="grid-item {{ person.group }}" alt="{{ person.title }}" title="{{ person.title }}">
-      <div class="center-wrap-1"><div class="center-wrap-2"><div class="center-wrap-3">
-        <div class="info">
-          <a href="{{ web_url }}">
-            <h4>{{ person.title }}</h4>
-            <p>{{ person.position }}</p>
-          </a>
-        </div>
-      </div></div></div>
-
-      <a href="{{ web_url }}" class="background">
-        <div class="grid-image">
-          {% if person.thumbnail %}<img src="{{ person.thumbnail }}"/>
-          {% else %}<br /><center>{{ person.title }}</center>
-          {% endif %}
-        </div>
-      </a>
-    </div>
-    {% endif %}
+    {% assign people = site.people_collaborators | sort:"weight"  %}
+		{% for person in people %}
+      {% include grid_person.html person=person %}
     {% endfor %}
   </div>
 
   <h3>Alumni</h3>
 
   <div class="grid">
-    {% for person in site.categories.people reversed %}
-    {% if person.alumni %}
-
-    {% if person.website %}
-      {% assign web_url = person.website %}
-    {% else %}
-      {% assign web_url = person.url %}
-    {% endif %}
-
-    <div class="grid-item {{ person.group }}" alt="{{ person.title }}" title="{{ person.title }}">
-      <div class="center-wrap-1"><div class="center-wrap-2"><div class="center-wrap-3">
-        <div class="info">
-          <a href="{{ web_url }}">
-            <h4>{{ person.title }}</h4>
-            <p>{{ person.position }}</p>
-          </a>
-        </div>
-      </div></div></div>
-
-      <a href="{{ web_url }}" class="background">
-        <div class="grid-image">
-          {% if person.thumbnail %}<img src="{{ person.thumbnail }}"/>
-          {% else %}<br /><center>{{ person.title }}</center>
-          {% endif %}
-        </div>
-      </a>
-    </div>
-    {% endif %}
+    {% assign people = site.people_alumni | sort:"weight"  %}
+		{% for person in people %}
+      {% include grid_person.html person=person %}
     {% endfor %}
   </div>
 
