--- a/_resources_software/isoverse.html
+++ b/_resources_software/isoverse.html
@@ -1,11 +1,17 @@
 ---
-layout: default
-title: isoverse
+layout: resource
+title: isoverse / isoreader / isoprocessor / isoviewer
+weight: 5
 title_html: >
-  <br/><a href="http://www.isoverse.org"><img src="/resources/images/isoverse/isoverse_logo.png" align="center" height="277"/></a>
+  <br/><a href="http://www.isoverse.org"><img src="/images/resources/isoverse/isoverse_logo.png" align="center" height="277"/></a>
   <h3>open-source data tools for stable isotopes</h3>
-category: resources
+picture_html: >
+  <img src="/images/resources/isoverse/isoverse_logo.png" width="200px"/>
+summary: >
+  Isoverse is a suite of platform-independent (Windows, Mac, Linux), open-source data tools for the efficient and reproducible processing of stable isotope data. Although written primarily in R, it can be used in both RMarkdown as well as Jupyter data processing notebooks. Due to the design based on the popular tidyverse style of R programming, all isoverse packages are easily extendable and work great with tidyverse packages such as tidyr, dplyr and ggplot.
+  It includes isoreader to read IRMS data files, isoprocessor to perform common calculations on IRMS data, and isoviewer to process files interactively...
 permalink: /isoverse/
+github: isoverse
 ---
 
 <div class="media">
@@ -19,7 +25,7 @@ permalink: /isoverse/
       Isoverse is a suite of platform-independent (Windows, Mac, Linux), open-source data tools for the efficient and reproducible processing of stable isotope data. Although written primarily in R, it can be used in both RMarkdown as well as Jupyter data processing notebooks. Due to the design based on the popular tidyverse style of R programming, all isoverse packages are easily extendable and work great with tidyverse packages such as tidyr, dplyr and ggplot.
   </div>
   <div class="media-right">
-    <a href="http://www.isoverse.org"><img src="/resources/images/isoverse/isoverse_logo_thumb.png" align="center" height="138.5"/></a>
+    <a href="http://www.isoverse.org"><img src="/images/resources/isoverse/isoverse_logo_thumb.png" align="center" height="138.5"/></a>
   </div>
 </div>
 
@@ -46,7 +52,7 @@ permalink: /isoverse/
     </p>
   </div>
   <div class="media-right">
-    <a href="http://isoreader.isoverse.org"><img src="/resources/images/isoverse/isoreader_logo_thumb.png" align="center" height="138.5"/></a>
+    <a href="http://isoreader.isoverse.org"><img src="/images/resources/isoverse/isoreader_logo_thumb.png" align="center" height="138.5"/></a>
   </div>
 </div>
 
@@ -71,7 +77,7 @@ permalink: /isoverse/
     </p>
   </div>
   <div class="media-right">
-    <a href="http://isoprocessor.isoverse.org"><img src="/resources/images/isoverse/isoprocessor_logo_thumb.png" align="center" height="150"/></a>
+    <a href="http://isoprocessor.isoverse.org"><img src="/images/resources/isoverse/isoprocessor_logo_thumb.png" align="center" height="150"/></a>
   </div>
 </div>
 
@@ -93,6 +99,6 @@ permalink: /isoverse/
     <p><span class="fa fa-rocket"></span>: An online demo of the isoviewer GUI is <a href="/isoviewer_demo">available on our server</a> but has limited computational resources (i.e. could be slow).</p>
   </div>
   <div class="media-right">
-    <a href="http://isoviewer.isoverse.org"><img src="/resources/images/isoverse/isoviewer_logo_thumb.png" align="center" height="150"/></a>
+    <a href="http://isoviewer.isoverse.org"><img src="/images/resources/isoverse/isoviewer_logo_thumb.png" align="center" height="150"/></a>
   </div>
 </div>
