--- a/news.html
+++ b/news.html
@@ -11,7 +11,7 @@ category: news
 permalink: /news/
 ---
 
-{% for post in site.categories.news %}
+{% for post in site.posts %}
 <div class="news-item media">
 
   <div class="media-left">
