update internal resources

--- a/login.html
+++ b/login.html
@@ -3,14 +3,10 @@ layout: default
 menu: Login
 icon: fa fa-key
 weight: 7
+title: Internal Resources
 category: login
-image:
-  - file: /images/header/login/login.jpg
-image_height: 300px
 permalink: /login/
 ---
-
-<h1>Internal Resources</h1>
 
 {% for resource in site.resources_internal %}
   {% include list_item.html item=resource %}
