--- a/people.html
+++ b/people.html
@@ -52,7 +52,7 @@ weight: 1
 		{% endfor %}
 	</div>
 
-  <h3>Joint Geobiology Labs (Faculty & Researchers)</h3>
+  <h3>Joint Labs & Close Collaborators</h3>
 
   <div class="grid">
     {% assign people = site.people_collaborators | sort:"weight"  %}
