--- a/resources.html
+++ b/resources.html
@@ -15,7 +15,7 @@ permalink: /resources/
 
 <h2> Open Source Policy </h2>
 
-We strive to make all our <a href = "#labware">lab designs</a> and <a href = "#software">software development</a> openly available and easily accessible to other scientists and students to advance the pace of discovery and promote collaboration.
+We strive to make our <a href = "#labware">lab designs</a> and <a href = "#software">software development</a> openly available and easily accessible to other scientists and students to advance the pace of discovery and promote collaboration.
 For details, please see the links below and the <a href="https://github.com/KopfLab">lab's repositories on GitHub</a>.
 
 <h2 id="facilities">Facilities</h2>
