--- a/people.html
+++ b/people.html
@@ -52,7 +52,7 @@ weight: 1
 		{% endfor %}
 	</div>
 
-  <h3>Joint Labs & Close Collaborators</h3>
+  <h3 id="collaborators">Joint Labs & Close Collaborators</h3>
 
   <div class="grid">
     {% assign people = site.people_collaborators | sort:"weight"  %}
@@ -61,7 +61,7 @@ weight: 1
     {% endfor %}
   </div>
 
-  <h3>Alumni</h3>
+  <h3 id="alumni">Alumni</h3>
 
   <div class="grid">
     {% assign people = site.people_alumni | sort:"weight"  %}
