--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@ image:
     location: Yellowstone National Park, Wyoming
 image_height: 300px
 image_interval: 3000
+grid: |
+  masonry: {
+    columnWidth: 292, // also needs changing in style.scss $people-image-width
+    gutter: 20,
+    isFitWidth: true
+  }
 weight: 0
 category: home
 ---
