--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@ The Geomicrobial Physiology lab at CU Boulder consists of a diverse group of res
 		{% endfor %}
 	</div>
 
-  Also check out our <a href="/people/#collaborators">collaborators</a> and <a href="/people/#alumni">lab alumni</a> to learn more about the lab.
+  <h4>See also our <a href="/people/#collaborators">collaborators</a> and <a href="/people/#alumni">lab alumni</a> to learn more about the lab.</h4>
 
 </div>
